--- a/pom.xml
+++ b/pom.xml
@@ -174,13 +174,17 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>5.0.6.Final</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>javax.transaction</groupId>
 			<artifactId>jta</artifactId>
 			<version>1.1</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.webflow</groupId>
+			<artifactId>spring-webflow</artifactId>
+			<version>2.4.5.RELEASE</version>
+		</dependency>
 
 	</dependencies>
 </project>
