--- a/pom.xml
+++ b/pom.xml
@@ -198,7 +198,7 @@
 			<version>2.8.8</version>
 		</dependency>
 
-		<!-- <dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
 			<version>4.2.0.RELEASE</version>
@@ -208,7 +208,7 @@
 			<groupId>com.sun.mail</groupId>
 			<artifactId>javax.mail</artifactId>
 			<version>1.5.6</version>
-		</dependency> -->
+		</dependency>
 
 
 	</dependencies>
